<resources>
    <string name="app_name">房产之窗</string>
    <string name="exit">再按一次退出应用</string>
    <string name="get_code">获取验证码</string>
    <string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="folder_all">所有图片</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">超出限制的张数,不可再选</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="love_health">爱健康</string>
    <string name="love_family">爱家人</string>
    <string name="love_oneself">爱自己</string>
    <string name="tv_share_wx">微信好友</string>
    <string name="tv_share_wx2">微信朋友圈</string>
    <string name="tv_share_qq">qq好友</string>
    <string name="tv_share_weibo">微博</string>
    <string name="version_update_error">文件下载失败，请稍后再试</string>
    <string name="version_update_title">更新中...</string>
    <string name="version_update_no_url">没有更新地址，请稍后再试</string>
    <string name="version_update_wait">下载中...</string>
    <string name="version_update_concel">下载取消</string>
    <string name="version_newest">当前已是最新版本！</string>
    <string name="version_is_update">有更新，是否马上更新？</string>
    <string name="post">发送</string>
    <string name="sure">确定</string>
    <string name="go_on">继续</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="sure_two">确认</string>
    <string name="submit">提交</string>
    <string name="pay_success">支付成功！</string>
    <string name="net_error">网络错误请重试！</string>
    <string name="net_error2">网络无法连接，请检查是否联网</string>
    <string name="tv_error2">重新加载</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="verification">验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_weibo">微博登录</string>
    <string name="login_qq">QQ登录</string>
    <string name="phone_number">手机号</string>
    <string name="please_input_pwd">请输入4位密码</string>
    <string name="please_input_newpwd">请输入新密码</string>
    <string name="please_sure_newpwd">请确认新密码</string>
    <string name="please_input_oldpwd">请输入旧密码</string>
    <string name="please_input_right_pwd">请输入4-20位数字、字母组合密码</string>
    <string name="please_input_verification">请输入短信验证码</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_right_phone">请输入正确的手机号码</string>
    <string name="please_input_right_verification">请输入正确的验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="now_register">注册</string>
    <string name="agree">&#160;&#160;同意</string>
    <string name="agreement">《爱基因服务条款》</string>
    <string name="register_name">注册</string>
    <string name="get_code_time">后重新发送</string>
    <string name="login_with_verification">手机验证码登录</string>
    <string name="login_with_password">密码登录</string>
    <string name="bind_account">绑定手机</string>
    <string name="find_password">找回密码</string>
    <string name="bind_now_account">绑定已有账号</string>
    <string name="register_bind_account">注册并绑定</string>
    <string name="title_person_info">个人信息</string>
    <string name="my_integral">我的积分</string>
    <string name="my_shop">积分商城</string>
    <string name="my_order">我的订单</string>
    <string name="my_post">我的帖子</string>
    <string name="title_my_collect">我的收藏夹</string>
    <string name="detection_record">检测记录</string>
    <string name="my_health_plan">我的健康计划</string>
    <string name="设置">设置</string>
    <string name="head">头像</string>
    <string name="user_name">昵称</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="email">邮箱</string>
    <string name="info_email">绑定邮箱</string>
    <string name="hint_name">请输入您的昵称</string>
    <string name="hint_email">请输入您的邮箱号</string>
    <string name="change_pwd">修改密码</string>
    <string name="clear_pic_cache">清除图片缓存</string>
    <string name="remind_set">提醒设置</string>
    <string name="health_remind_time">21天健康计划提醒时间</string>
    <string name="set_igene_pwd">设置基因报告查看密码</string>
    <string name="title_igene_pwd">基因报告查看密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="input_pwd">输入查看密码</string>
    <string name="ple_input_igene_pwd">请输入您的查看密码</string>
    <string name="find_pwd">忘记密码</string>
    <string name="about_us">关于我们</string>
    <string name="option_feedback">意见反馈</string>
    <string name="customer_phone">客服热线</string>
    <string name="exti_account">退出当前账号</string>
    <string name="set">设置</string>
    <string name="open_pwd">开启密码锁定</string>
    <string name="sure_pwd">确认密码</string>
    <string name="check_update">检查更新</string>
    <string name="about_igene">关于爱基因</string>
    <string name="copyright">Copyright©2011-2015爱基因版权所有</string>
    <string name="integral_level">积分等级</string>
    <string name="community_standar">社区规范</string>
    <string name="terms_service">服务条款</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="title_health_appraisal">健康评估</string>
    <string name="tv_health_all">健康总分</string>
    <string name="tv_health_detection">后天检测</string>
    <string name="tv_health_detection_gene">基因检测</string>
    <string name="tv_fund_result">基因检测报告</string>
    <string name="hint_fund_email">请输入邮箱地址</string>
    <string name="title_health_plan">健康计划</string>
    <string name="tv_detection_result">检测结果</string>
    <string name="tv_health_branch">分</string>
    <string name="tv_health_you">您的健康总分打败了全国</string>
    <string name="tv_health_you_a">万人</string>
    <string name="tv_detection_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;小主，此“后天测试”是依据中医国家标准开发，虽测试过程繁复，但却能帮助知晓身体情况，洞悉疾病隐患，当常常自检</string>
    <string name="tv_detection_one">了解自己的体质</string>
    <string name="tv_detection_two">了解体质与疾病的关系</string>
    <string name="tv_detection_three">获得个性化调理体质的方案</string>
    <string name="tv_detection_min">分钟</string>
    <string name="tv_start_detection">开始测试</string>
    <string name="tv_left_one">完整全面</string>
    <string name="tv_left_two">准确度93%</string>
    <string name="tv_left_three">2000万人测过</string>
    <string name="tv_right_one">完成速度超快</string>
    <string name="tv_right_two">准确度53%</string>
    <string name="tv_detection_zero">0题</string>
    <string name="tv_number_five">5</string>
    <string name="tv_number_one">1</string>
    <string name="tv_number_sixth">/60</string>
    <string name="tv_degree_risk">风险程度</string>
    <string name="tv_disease_one">乳腺癌</string>
    <string name="tv_disease_two">宫颈癌</string>
    <string name="tv_disease_three">子宫癌</string>
    <string name="tv_prevent_one">乳腺癌预防</string>
    <string name="tv_prevent_two">宫颈癌预防</string>
    <string name="tv_prevent_three">子宫癌预防</string>
    <string name="tv_choose_a">A.</string>
    <string name="tv_choose_b">B.</string>
    <string name="tv_choose_c">C.</string>
    <string name="tv_choose_d">D.</string>
    <string name="tv_choose_back">测试还未结束，是否退出？</string>
    <string name="tv_health_nogood">不良习惯</string>
    <string name="tv_prevent_plan">计划</string>
    <string name="tv_prevent_rank">排行</string>
    <string name="tv_prevent_knowledge">知识</string>
    <string name="tv_prevent_no">当前没有排行哦</string>
    <string name="tv_prevent_man">人在进行</string>
    <string name="tv_health_other">其他部位</string>
    <string name="tv_no_start">未加入计划</string>
    <string name="tv_health_plan">加入健康计划</string>
    <string name="tv_plan_ing">人在进行</string>
    <string name="tv_health_fist">   	    你还未开始检测，
   	    \n检测完以下任意一项之后，
   	    \n就可以查看您的健康总分了哦</string>
    <string name="tv_health_number">100</string>
    <string name="tv_health_gotext">去检测</string>
    <string name="tv_result_send">是否将检测报告发送至我邮箱</string>
    <string name="tv_result_nobind">您还未绑定邮箱，是否现在就去绑定</string>
    <string name="tv_health_completion">视频完成</string>
    <string name="tv_fund_uncheck">未检测</string>
    <string name="tv_fund_checked">已检测</string>
    <string name="tv_health_lock">完成上一个训练才能解锁下一个训练！</string>
    <string name="tv_result_reminda">温馨提示：精确结果，推荐使用5分钟测试或基因检测</string>
    <string name="tv_result_remindb">温馨提示：精确结果，推荐使用基因检测</string>
    <string name="tv_result_five">5分钟测试</string>
    <string name="tv_video_back">现在退出将不能保存训练进度及数据，确认要结束训练吗？</string>
    <string name="tv_video_sure">确认结束</string>
    <string name="tv_video_cancel">继续训练</string>
    <string name="hot_search_word">搜索的帖子名称</string>
    <string name="hot_search_hot">热门搜索词</string>
    <string name="topic_name">帖子名称</string>
    <string name="topic_post">发表帖子</string>
    <string name="case_post">发表案例</string>
    <string name="case_name">案例</string>
    <string name="tv_case_detail">案例详情</string>
    <string name="topic_info">帖子详情</string>
    <string name="tv_topic_delete">确定要删除帖子吗？</string>
    <string name="tv_mycollect_delete">确定要删除收藏吗？</string>
    <string name="tv_completion_share">立即分享</string>
    <string name="title_integral_mall">积分商城 </string>
    <string name="goods_collect">商品收藏 </string>
    <string name="goods_address">收货地址 </string>
    <string name="goods_cartshop">购物车 </string>
    <string name="goods_order">我的订单 </string>
    <string name="money_symbol">￥</string>
    <string name="tv_number_zero">0</string>
    <string name="tv_order_cancel">您确定要取消订单吗？</string>
    <string name="tv_order_delete">您确定要删除此订单吗？</string>
    <string name="title_product_detail">商品详情</string>
    <string name="title_product_integral">积分</string>
    <string name="title_product_evaluation">评价</string>
    <string name="tv_product_num">请选择产品数量</string>
    <string name="tv_product_numover">库存数量不足！</string>
    <string name="tv_product_message">买家留言：</string>
    <string name="hint_order_message">请输入买家留言</string>
    <string name="tv_order_setaddress">请设置收货地址</string>
    <string name="tv_order_message">麻烦尽快发货，谢谢！</string>
    <string name="title_order_sure">确认订单</string>
    <string name="title_mall_cart">购物车</string>
    <string name="tv_cart_sub">受不了了，宝贝不能再减少了哦！</string>
    <string name="tv_cart_nulla">购物车空空的</string>
    <string name="tv_cart_nullb">快去装满吧</string>
    <string name="tv_cart_nullc">去逛逛</string>
    <string name="title_pay_mall">付款</string>
    <string name="title_pay_mall_success">付款成功</string>
    <string name="tv_pay_intager">确认兑换，兑换后不可更改</string>
    <string name="title_mall_address">收货地址</string>
    <string name="title_mall_add_address">添加收货</string>
    <string name="title_mall_edit_address">编辑收货</string>
    <string name="title_mall_address_name">收货人&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="title_mall_address_phone">手机号&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="title_mall_address_in">所在地区&#160;&#160;</string>
    <string name="title_mall_address_detail">详细地址&#160;&#160;</string>
    <string name="title_mall_address_area">选择地区</string>
    <string name="title_mall_address_sure">完成</string>
    <string name="tv_mall_delete">是否删除收货地址？</string>
    <string name="tv_mall_default">是否设置为默认收货地址？</string>
    <string name="tv_address_default">默认地址</string>
    <string name="hint_address_man">请输入收货人</string>
    <string name="demand_buySecondHouse">我要买房</string>
    <string name="demand_SellSecondHouse">发布出售</string>
    <string name="demand_wantRend">我要租房</string>
    <string name="demand_toRend">发布出租</string>
    <string name="fund_year">贷款年限</string>
    <string name="fund_adjust">流动性调整基数</string>
    <string name="hint_year"></string>
    <string name="tv_business_tab">商业贷款</string>
    <string name="tv_fund_tab">公积金贷款</string>
    <string name="tv_combination_tab">组合贷款</string>
</resources>