<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
     android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/title_base" />

    <LinearLayout
        style="@style/theme_w_match"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_business_tab"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_business_tab" />

        <View style="@style/line_vertical" />

        <TextView
            android:id="@+id/tv_fund_tab"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_fund_tab" />

        <View style="@style/line_vertical" />

        <TextView
            android:id="@+id/tv_combination_tab"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_combination_tab" />
    </LinearLayout>

    <com.zorasun.fangchanzhichuang.general.util.ViewPagerTab
        android:id="@+id/viewpg_tool_tab"
        android:layout_width="match_parent"
        android:layout_height="3dp" />

    <View style="@style/line" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_tool"
        style="@style/theme_match"
        android:layout_gravity="center" />

</LinearLayout>