<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg" >

    <include
        android:id="@+id/titleBar"
        layout="@layout/title_base_home" />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleBar"
        android:orientation="vertical"
        android:paddingBottom="24dp" >

        <RelativeLayout
            android:id="@+id/rl_demand_buySecondHouse"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/qiugou"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_buySecondHouse"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_demand_sellSecondHouse"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/chushou"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_SellSecondHouse"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_demand_wantRend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/qiuzu"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_wantRend"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_demand_toRend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/chuzu"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_toRend"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </RelativeLayout>
    </LinearLayout>

    <!-- <android.support.v4.view.ViewPager -->
    <!-- android:id="@+id/vp_senddemand" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentBottom="true" -->
    <!-- android:layout_below="@+id/ll_top" /> -->

</RelativeLayout>