<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp" >

        <TextView
            android:id="@+id/tv_fundloaner_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_year"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_fundloaner_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_year"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="年"
            android:textColor="@color/black" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/linear_fundloaner_adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fund_adjust"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_fundloaner_adjust"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0.6"
            android:textColor="#009aff" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/arrow_foward" />
    </LinearLayout>

</LinearLayout>